force-app/main/default/objects/FEC_Transaction__c/FEC_Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TN - {0}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>