force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Approval_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Approval_Code__c</fullName>
    <label>Approval Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>