force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Authorization_Response__c.field-meta.xml
<CustomField>
    <fullName>FEC_Authorization_Response__c</fullName>
    <label>Authorization Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>