force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Card_Seq__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Seq__c</fullName>
    <label>Card Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>