force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>IPP Transactions</relationshipLabel>
    <relationshipName>IPP_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>