force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Credit_Debit_Flag__c.field-meta.xml
<CustomField>
    <fullName>FEC_Credit_Debit_Flag__c</fullName>
    <label>Credit Debit Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>