force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Decline_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decline_Description__c</fullName>
    <label>Decline Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>