force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Decline_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Decline_Reason_Code__c</fullName>
    <label>Decline Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>