force-app/main/default/objects/FEC_Transaction__c/fields/FEC_IPP_Key__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Key__c</fullName>
    <label>IPP Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>