force-app/main/default/objects/FEC_Transaction__c/fields/FEC_IPPEligibilityFlag__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPPEligibilityFlag__c</fullName>
    <label>IPP Eligibility Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>