force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Merchant_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Merchant_Category_Code__c</fullName>
    <label>Merchant Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>