force-app/main/default/objects/FEC_Transaction__c/fields/FEC_OTP_Sent__c.field-meta.xml
<CustomField>
    <fullName>FEC_OTP_Sent__c</fullName>
    <label>OTP Sent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>