force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Post_Date__c</fullName>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>