force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>