force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Statement__c.field-meta.xml
<CustomField>
    <fullName>FEC_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement</label>
    <referenceTo>FEC_Statement__c</referenceTo>
    <relationshipLabel>Transaction</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>