force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>