force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>