force-app/main/default/objects/FEC_Transaction__c/fields/FEC_Transaction_Plan__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Plan__c</fullName>
    <label>Transaction Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>